<resources>
    <string name="app_name">Music_34</string>
    <string name="stream_music">Stream Music</string>
    <string name="local_music">Local Music</string>
    <string name="downloaded">Downloaded</string>
    <string name="smusic">SMusic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_00_00">00:00</string>
    <string name="song_name">Song name</string>
    <string name="artist">Artist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genres">GENRES</string>
    <string name="more">MORE</string>

    <string name="hotandnew">HOT&amp;NEW</string>
    <string name="top">TOP</string>
    <string name="shuffle_all">SHUFFLE ALL</string>
    <string name="item_track_decoration">-</string>

    <string name="error_local_load_file">Something was wrong. Please try again!</string>
    <string name="error_local_empty_library">No media found</string>
    <string name="play_all">PLAY ALL</string>
    <string name="unknown">Unknown</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
</resources>
