<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_5"
    >
    <ImageView
        android:id="@+id/image_album"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:src="@drawable/ic_album_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_information"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_more_option"
        app:layout_constraintStart_toEndOf="@id/image_album"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/text_song_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/text_artist"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/song_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_song_name"
            />
        <TextView
            android:id="@+id/text_decoration"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/item_track_decoration"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_artist"
            app:layout_constraintTop_toBottomOf="@id/text_song_name"
            />
        <TextView
            android:id="@+id/text_duration"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_decoration"
            app:layout_constraintTop_toBottomOf="@id/text_song_name"
            />
    </android.support.constraint.ConstraintLayout>
    <ImageView
        android:id="@+id/image_more_option"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_margin="@dimen/dp_10"
        android:src="@drawable/ic_more_option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</android.support.constraint.ConstraintLayout>
