<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    >
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_information"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_8"
            app:layout_constraintStart_toEndOf="@id/image_logo"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/text_song_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/song_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo"
            />
        <TextView
            android:id="@+id/text_artist"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_song_name"
            />
        <ImageView
            android:id="@+id/image_previous"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_artist"
            />
        <ImageView
            android:id="@+id/image_play"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/ic_play_collapse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_next"
            app:layout_constraintStart_toEndOf="@id/image_previous"
            app:layout_constraintTop_toBottomOf="@id/text_artist"
            />
        <ImageView
            android:id="@+id/image_next"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_play"
            app:layout_constraintTop_toBottomOf="@id/text_artist"
            />
    </android.support.constraint.ConstraintLayout>
    <ImageView
        android:id="@+id/image_album"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_10"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_album_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/constraint_information"
        app:layout_constraintTop_toTopOf="parent"
        />
</android.support.constraint.ConstraintLayout>
